--- a/encyclopedia/templates/encyclopedia/index.html
+++ b/encyclopedia/templates/encyclopedia/index.html
@@ -10,7 +10,7 @@
     <ul>
         {% for entry in entries %}
             <li>
-                <a href="{% url 'index' %}{{ entry }}">{{ entry }}</a>
+                <a href="{% url 'encyclopedia:index' %}{{ entry }}">{{ entry }}</a>
             </li>
         {% endfor %}
     </ul>
