--- a/encyclopedia/templates/encyclopedia/add.html
+++ b/encyclopedia/templates/encyclopedia/add.html
@@ -18,7 +18,9 @@ Create New Page
             {% render_field field class="form-control col-md-5" %}
         </div>
     {% endfor %}
-    
+    {% if error %}
+        <div class="alert alert-warning col-md-5">{{ error }}</div>
+    {% endif %}
     <input type="submit" class="btn btn-primary" value="Save">
 </form>
 
